# execudeck

./: .gitignore  best_practices.md  execudeck.toml  pyproject.toml  todo.md
e2e_tests/: run_e2e.py
src/execudeck/: __init__.py  builder.py  cli.py  config.py  editor.py  extractor.py  generator.py  prompt_utils.py  reviewer.py
src/execudeck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/execudeck/prompts/: edit.txt  generate.txt  review.txt
src/execudeck/schema/: __init__.py  critique.py  deck_structure.py  extraction.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_editor.py  test_extractor.py  test_generator.py  test_prompt_utils.py  test_reviewer.py  test_schema_critique.py  test_schema_deck_structure.py  test_schema_extraction.py
